log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: reader
          image: log-reader:latest
          imagePullPolicy: Never
          volumeMounts: # Mount volume
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: writer
          image: log-writer:latest
          imagePullPolicy: Never
          volumeMounts: # Mount volume
            - name: shared-logs
              mountPath: /usr/src/app/files
